--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "install": "(cd client && npm install) && (cd server && npm install)",
     "start": "concurrently \"cd client && PORT=3000 npm start\" \"cd server && PORT=3001 npm start\"",
-    "build": "concurrently \"cd client && yarn build\" \"cd server && yarn build\"",
-    "start:prod": "cd server && yarn start:prod",
-    "heroku-postbuild": "yarn build"
+    "build": "concurrently \"cd client && npm run build\" \"cd server && npm run build\"",
+    "start:prod": "cd server && npm run start:prod",
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
